--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,26 @@ a{
 
 /* index блок заголовка */
 .main-header {
-   padding-top:200px;
+   max-width: 1600px;
+   height: 600px;
+   margin-left: auto;
+  margin-right: auto;
+    padding-top:200px;
    padding-bottom:200px;
    
     background-color: var(--background-color-dark);
     text-align: center;
+
+    background-image:  
+    linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero_background.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+
 }
 .header-title {
     color: var(--secondary-color);
